--- a/src/app/secciones/animacion/animacion.component.css
+++ b/src/app/secciones/animacion/animacion.component.css
@@ -101,7 +101,7 @@
   padding: 5px;
   margin-top: 5px;
   width: 100%;
-  height: 300px;
+  height: 400px;
   overflow-y: scroll;
 }
 
@@ -389,6 +389,15 @@ video{
     font-family: 'Poppins bold', sans-serif
   }
 
+  .scroll {
+    display: block;
+    padding: 5px;
+    margin-top: 5px;
+    width: 100%;
+    height: 600px;
+    overflow-y: scroll;
+  }
+
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
@@ -436,6 +445,16 @@ video{
     font-family: 'Poppins bold', sans-serif
   }
 
+  
+  .scroll {
+    display: block;
+    padding: 5px;
+    margin-top: 5px;
+    width: 100%;
+    height: 600px;
+    overflow-y: scroll;
+  }
+  
 }
 
 /* Extra Extra large devices (large laptops and desktops, 1200px and up) */
