--- a/src/app/secciones/guiones/guiones.component.css
+++ b/src/app/secciones/guiones/guiones.component.css
@@ -50,7 +50,7 @@ width: 100%;
   margin: auto;
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: start;
  
 }
 .proyectos{
@@ -68,6 +68,7 @@ width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 20px;
   margin-left: 0.5%;
 }
 /*.icono{
@@ -83,7 +84,13 @@ width: 100%;
   width: 65%;
 }
 
+.item{
+  Display: flex;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;
 
+}
 .item p{
   text-align: center;
   font-family: 'Poppins', sans-serif
@@ -94,7 +101,7 @@ width: 100%;
   padding: 5px;
   margin-top: 5px;
   width: 100%;
-  height: 300px;
+  height: 400px;
   overflow-y: scroll;
 }
 
@@ -107,27 +114,12 @@ h1 h3 {
   font-weight: bolder;
 }
 
-.boton-ejemplo{
-  width:100%;
-  height: 100%;
-  margin-left:0;
-  margin-right:0;
-  padding-left:0;
-  padding-right:0;
-  display:block;
-  background-color: rgba(0, 0, 0, 0);
-  border: none;
-  cursor:pointer;
-  overflow: hidden;
-  outline:none;
-  }
-
 
 
 /*-----------------------------------------------Estilos Modales------------------------------------------*/
 
 /*--------------------------------------------------Eliminar----------------------------------------------*/
-.-ejes ul li{
+.botones ul li{
   padding:2%;
   display: flex;
   margin-left: 50%;
@@ -208,8 +200,6 @@ video{
   border-radius: 5%;
   
 }
-
-
 
 
 /*--------------------------------------------------Responsive----------------------------------------------*/
@@ -326,6 +316,7 @@ video{
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 20px;
   }
   .botones ul li{
     padding:2%;
