--- a/src/app/secciones/animacion/animacion.component.css
+++ b/src/app/secciones/animacion/animacion.component.css
@@ -84,13 +84,6 @@
   width: 65%;
 }
 
-.item{
-  Display: flex;
-  justify-content: center;
-  flex-direction: column;
-  flex-wrap: wrap;
-
-}
 .item p{
   text-align: center;
   font-family: 'Poppins', sans-serif
@@ -101,7 +94,7 @@
   padding: 5px;
   margin-top: 5px;
   width: 100%;
-  height: 400px;
+  height: 300px;
   overflow-y: scroll;
 }
 
@@ -112,6 +105,21 @@
 h1 h3 {
   color: red;
   font-weight: bolder;
+}
+
+.boton-ejemplo{
+  width:100%;
+  height: 100%;
+  margin-left:0;
+  margin-right:0;
+  padding-left:0;
+  padding-right:0;
+  display:block;
+  background-color: rgba(0, 0, 0, 0);
+  border: none;
+  cursor:pointer;
+  overflow: hidden;
+  outline:none;
 }
 
 
@@ -389,15 +397,7 @@ video{
     font-family: 'Poppins bold', sans-serif
   }
 
-  .scroll {
-    display: block;
-    padding: 5px;
-    margin-top: 5px;
-    width: 100%;
-    height: 600px;
-    overflow-y: scroll;
-  }
-
+ 
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
@@ -445,16 +445,7 @@ video{
     font-family: 'Poppins bold', sans-serif
   }
 
-  
-  .scroll {
-    display: block;
-    padding: 5px;
-    margin-top: 5px;
-    width: 100%;
-    height: 600px;
-    overflow-y: scroll;
-  }
-  
+
 }
 
 /* Extra Extra large devices (large laptops and desktops, 1200px and up) */
@@ -502,5 +493,15 @@ video{
     justify-content: space-between;
     font-family: 'Poppins bold', sans-serif
   }
+  .scroll {
+    display: block;
+    border: 0px solid red;
+    padding: 5px;
+    margin-top: 5px;
+    width: 100%;
+    height: 400px;
+    overflow-y: scroll;
+  }
+  
 }
 
