--- a/src/app/secciones/programacion/programacion.component.css
+++ b/src/app/secciones/programacion/programacion.component.css
@@ -85,13 +85,6 @@
   width: 65%;
 }
 
-.item{
-  Display: flex;
-  justify-content: center;
-  flex-direction: column;
-  flex-wrap: wrap;
-
-}
 .item p{
   text-align: center;
   font-family: 'Poppins', sans-serif
@@ -102,7 +95,7 @@
   padding: 5px;
   margin-top: 5px;
   width: 100%;
-  height: 400px;
+  height: 300px;
   overflow-y: scroll;
 }
 
@@ -113,6 +106,21 @@
 h1 h3 {
   color: red;
   font-weight: bolder;
+}
+
+.boton-ejemplo{
+  width:100%;
+  height: 100%;
+  margin-left:0;
+  margin-right:0;
+  padding-left:0;
+  padding-right:0;
+  display:block;
+  background-color: rgba(0, 0, 0, 0);
+  border: none;
+  cursor:pointer;
+  overflow: hidden;
+  outline:none;
 }
 
 
@@ -473,6 +481,15 @@ video{
     display:flex;
     justify-content: space-between;
     font-family: 'Poppins bold', sans-serif
+  }
+  .scroll {
+    display: block;
+    border: 0px solid red;
+    padding: 5px;
+    margin-top: 5px;
+    width: 100%;
+    height: 400px;
+    overflow-y: scroll;
   }
 }
 
