--- a/src/app/secciones/animacion/animacion.component.css
+++ b/src/app/secciones/animacion/animacion.component.css
@@ -50,7 +50,7 @@
   margin: auto;
   display: flex;
   flex-wrap: wrap;
-  justify-content: start;
+  justify-content: flex-start;
  
 }
 .proyectos{
