--- a/src/app/secciones/programacion/programacion.component.css
+++ b/src/app/secciones/programacion/programacion.component.css
@@ -51,7 +51,7 @@
   margin: auto;
   display: flex;
   flex-wrap: wrap;
-  justify-content: start;
+  justify-content: flex-start;
  
 }
 .proyectos{
