--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,11 +1,33 @@
 <div class="colorpantalla">
-  <div class="container mb-5 ">
+
+    <div *ngIf="registroInvalido" class="container">
+        <div class="row  mx-auto d-flex justify-content-center ">
+          <div class="col-6 d-flex justify-content-center mt-5">
+            <h1>Usuario no existe o fue Eliminado</h1>
+          </div>
+        </div>
+        <div class="row  mx-auto d-flex justify-content-center ">
+            <div class="col-12 d-flex justify-content-center mt-5">
+              <h1>Contactarse con Administrador:  j.camiloangarita@gmail.com</h1>
+            </div>
+          </div>
+        <div class="row d-flex justify-content-center mb-5 mt-5">
+            <button (click)="redireccionar()" type="button" class="btn btn-primary col-2 mx-5 mb-5 btn-redo">Volver al Login</button>
+        </div>
+    
+     </div>
+
+
+  <div *ngIf="!registroInvalido" class="container mb-5 ">
     <div class="row">
 
         <div class="col-12 mx-auto mt-5 ">
             <div class="card colorcuadro">
                 <div class="card-body ">
-                    <h1 class="text-center">Login</h1>
+
+                    <iframe src="https://i.simmer.io/@JuanAngarita/demo2-webgl" style="width:960px;height:600px"></iframe>
+
+                    <!--<h1 class="text-center">Login</h1>
                     <form  [formGroup]="loginForm" (ngSubmit)="onLogin()">
 
                         <div class="form-group colorblanco d-flex justify-content-center mt-5 col-8">
@@ -23,11 +45,7 @@
                             <a class= "btn btn-primary col-2 mx-5 btn-redo" [routerLink]="['/register']">Registro</a>
                         </div>
 
-                        <!--<div class="row d-flex justify-content-center">
-                            <button (click)="onGoogleLogin()" class="btn btn-light col-2 btn-redo mb-5"> <img src="https://img.icons8.com/color/16/000000/google-logo.png"> LOGIN CON GOOGLE</button>
-                        </div>-->
-
-                    </form>
+                    </form>-->
 
                 </div>
             </div>
